added hosts endpoints
