# src/models/host-model.ts
@@ -1,0 +1,5 @@
+export default interface Host {
+    email?: string,
+    cnpj?: string,
+    fantasyName?: string,
+}
